A. Olesya and Rodion/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
22:50:40 **** Rebuild of configuration Debug for project A. Olesya and Rodion ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\A. Olesya and Rodion.o" "..\\src\\A. Olesya and Rodion.cpp" 
g++ -o "A. Olesya and Rodion.exe" "src\\A. Olesya and Rodion.o" 
22:50:57 **** Incremental Build of configuration Debug for project A. Olesya and Rodion ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\A. Olesya and Rodion.o" "..\\src\\A. Olesya and Rodion.cpp" 
g++ -o "A. Olesya and Rodion.exe" "src\\A. Olesya and Rodion.o" 
Info: Nothing to build for A. Olesya and Rodion
Info: Nothing to build for A. Olesya and Rodion
22:56:20 **** Incremental Build of configuration Debug for project A. Olesya and Rodion ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\A. Olesya and Rodion.o" "..\\src\\A. Olesya and Rodion.cpp" 
..\src\A. Olesya and Rodion.cpp: In function 'int main()':
..\src\A. Olesya and Rodion.cpp:21:7: error: return-statement with no value, in function returning 'int' [-fpermissive]
       return;
       ^~~~~~
22:56:32 **** Incremental Build of configuration Debug for project A. Olesya and Rodion ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\A. Olesya and Rodion.o" "..\\src\\A. Olesya and Rodion.cpp" 
g++ -o "A. Olesya and Rodion.exe" "src\\A. Olesya and Rodion.o" 
c:/mingw/bin/../lib/gcc/i686-pc-mingw32/8.1.0/../../../../i686-pc-mingw32/bin/ld.exe: cannot open output file A. Olesya and Rodion.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
22:57:19 **** Incremental Build of configuration Debug for project A. Olesya and Rodion ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\A. Olesya and Rodion.o" "..\\src\\A. Olesya and Rodion.cpp" 
g++ -o "A. Olesya and Rodion.exe" "src\\A. Olesya and Rodion.o" 
c:/mingw/bin/../lib/gcc/i686-pc-mingw32/8.1.0/../../../../i686-pc-mingw32/bin/ld.exe: cannot open output file A. Olesya and Rodion.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
22:57:52 **** Incremental Build of configuration Debug for project A. Olesya and Rodion ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\A. Olesya and Rodion.o" "..\\src\\A. Olesya and Rodion.cpp" 
g++ -o "A. Olesya and Rodion.exe" "src\\A. Olesya and Rodion.o" 
c:/mingw/bin/../lib/gcc/i686-pc-mingw32/8.1.0/../../../../i686-pc-mingw32/bin/ld.exe: cannot open output file A. Olesya and Rodion.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
22:59:07 **** Incremental Build of configuration Debug for project A. Olesya and Rodion ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\A. Olesya and Rodion.o" "..\\src\\A. Olesya and Rodion.cpp" 
g++ -o "A. Olesya and Rodion.exe" "src\\A. Olesya and Rodion.o" 
c:/mingw/bin/../lib/gcc/i686-pc-mingw32/8.1.0/../../../../i686-pc-mingw32/bin/ld.exe: cannot open output file A. Olesya and Rodion.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
22:59:18 **** Incremental Build of configuration Debug for project A. Olesya and Rodion ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -o "A. Olesya and Rodion.exe" "src\\A. Olesya and Rodion.o" 
c:/mingw/bin/../lib/gcc/i686-pc-mingw32/8.1.0/../../../../i686-pc-mingw32/bin/ld.exe: cannot open output file A. Olesya and Rodion.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
22:59:31 **** Incremental Build of configuration Debug for project A. Olesya and Rodion ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -o "A. Olesya and Rodion.exe" "src\\A. Olesya and Rodion.o" 
c:/mingw/bin/../lib/gcc/i686-pc-mingw32/8.1.0/../../../../i686-pc-mingw32/bin/ld.exe: cannot open output file A. Olesya and Rodion.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
22:59:37 **** Incremental Build of configuration Debug for project A. Olesya and Rodion ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -o "A. Olesya and Rodion.exe" "src\\A. Olesya and Rodion.o" 
c:/mingw/bin/../lib/gcc/i686-pc-mingw32/8.1.0/../../../../i686-pc-mingw32/bin/ld.exe: cannot open output file A. Olesya and Rodion.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
00:15:11 **** Incremental Build of configuration Debug for project A. Olesya and Rodion ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -o "A. Olesya and Rodion.exe" "src\\A. Olesya and Rodion.o" 
c:/mingw/bin/../lib/gcc/i686-pc-mingw32/8.1.0/../../../../i686-pc-mingw32/bin/ld.exe: cannot open output file A. Olesya and Rodion.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
00:15:43 **** Incremental Build of configuration Debug for project A. Olesya and Rodion ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -o "A. Olesya and Rodion.exe" "src\\A. Olesya and Rodion.o" 
c:/mingw/bin/../lib/gcc/i686-pc-mingw32/8.1.0/../../../../i686-pc-mingw32/bin/ld.exe: cannot open output file A. Olesya and Rodion.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
00:15:57 **** Incremental Build of configuration Debug for project A. Olesya and Rodion ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -o "A. Olesya and Rodion.exe" "src\\A. Olesya and Rodion.o" 
c:/mingw/bin/../lib/gcc/i686-pc-mingw32/8.1.0/../../../../i686-pc-mingw32/bin/ld.exe: cannot open output file A. Olesya and Rodion.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
00:16:07 **** Incremental Build of configuration Debug for project A. Olesya and Rodion ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -o "A. Olesya and Rodion.exe" "src\\A. Olesya and Rodion.o" 
c:/mingw/bin/../lib/gcc/i686-pc-mingw32/8.1.0/../../../../i686-pc-mingw32/bin/ld.exe: cannot open output file A. Olesya and Rodion.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
00:17:50 **** Incremental Build of configuration Debug for project A. Olesya and Rodion ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\A. Olesya and Rodion.o" "..\\src\\A. Olesya and Rodion.cpp" 
g++ -o "A. Olesya and Rodion.exe" "src\\A. Olesya and Rodion.o" 
c:/mingw/bin/../lib/gcc/i686-pc-mingw32/8.1.0/../../../../i686-pc-mingw32/bin/ld.exe: cannot open output file A. Olesya and Rodion.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
00:18:07 **** Incremental Build of configuration Debug for project A. Olesya and Rodion ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\A. Olesya and Rodion.o" "..\\src\\A. Olesya and Rodion.cpp" 
g++ -o "A. Olesya and Rodion.exe" "src\\A. Olesya and Rodion.o" 
c:/mingw/bin/../lib/gcc/i686-pc-mingw32/8.1.0/../../../../i686-pc-mingw32/bin/ld.exe: cannot open output file A. Olesya and Rodion.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
00:18:58 **** Incremental Build of configuration Debug for project A. Olesya and Rodion ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\A. Olesya and Rodion.o" "..\\src\\A. Olesya and Rodion.cpp" 
g++ -o "A. Olesya and Rodion.exe" "src\\A. Olesya and Rodion.o" 
c:/mingw/bin/../lib/gcc/i686-pc-mingw32/8.1.0/../../../../i686-pc-mingw32/bin/ld.exe: cannot open output file A. Olesya and Rodion.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
